# pavex-multi-config

./: README.md
app/: Cargo.toml
app/src/: blueprint.rs  configuration.rs  lib.rs  schemas.rs
app/src/routes/: mod.rs
app/src/routes/integrations/: mod.rs
app/src/routes/integrations/big_data_api/: bigdata.rs  bigdata_client.rs  bigdata_configuration.rs  mod.rs
server/configuration/: dev.yml
server/src/configuration/: schema.rs
server/tests/integration/: big_data_api.rs  helpers.rs  main.rs
server_sdk/src/: lib.rs
